--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
@@ -12,6 +12,15 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdProducto)
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+
+    }
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
