--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Nuevo.cshtml
@@ -9,6 +9,7 @@
 }
 @using (Html.BeginForm("Nuevo", "Vendedor", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
 
     <div class="row">
         <div class="col-md-12">
