--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/_GridViewPartial_vendedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/_GridViewPartial_vendedor.cshtml
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdVendedor = DataBinder.Eval(tc.DataItem, "IdVendedor") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdVendedor = DataBinder.Eval(tc.DataItem, "IdVendedor") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdVendedor = DataBinder.Eval(tc.DataItem, "IdVendedor") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa") , IdVendedor = DataBinder.Eval(tc.DataItem, "IdVendedor") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -77,7 +77,7 @@
             c.Width = Unit.Pixel(150);
         });
 
-        
+
         settings.Columns.Add("Codigo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Ve_Vendedor", "Vendedor").Width = Unit.Percentage(70);
         settings.Columns.Add("Estado", "Estadp").Width = Unit.Percentage(10);
