--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
@@ -78,7 +78,7 @@
     });
 
     function cargar_bodega() {
-        $("#IdBodega").empty();
+        $("#IdBodega").val();
 
         var sucursal = $("#IdSucursal").val();
 
