--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
@@ -10,6 +10,7 @@
 }
 @using (Html.BeginForm("INV_003", "InventarioReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa, new { @id="IdEmpresa"})
     <div class="box collapsed-box">
         <div class="box-header with-border">
             <div class="row">
@@ -65,7 +66,7 @@
                     <div class="col-md-2">
                         <div class="form-group">
                             <label for="dGrupo">Grupo</label>
-                            @Html.DropDownListFor(q => q.IdGrupo, new SelectList(ViewBag.lst_grupo, "IdGrupo", "nom_grupo"), new { @class = "form-control", @id = "dGrupo" })
+                            @Html.DropDownListFor(q => q.IdGrupo, new SelectList(ViewBag.lst_grupo, "IdGrupo", "nom_grupo"), new { @class = "form-control", @id = "IdGrupo" })
                             @Html.ValidationMessageFor(q => q.IdGrupo, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -138,7 +139,8 @@
 }
 <script>
     $(function () {
-        //Date picker
+        cargar_bodega();
+
         $('#fecha_ini').datepicker({
             autoclose: true
         })
@@ -146,17 +148,26 @@
         $('#fecha_fin').datepicker({
             autoclose: true
         })
+    });
 
-        });
     $("#IdSucursal").change(function () {
         cargar_bodega();
     });
+
     $("#IdCategoria").change(function () {
         cargar_lineas();
+    });
+
+    $("#IdLinea").change(function () {
         cargar_grupos();
+    });
+    $("#IdGrupo").change(function () {
         cargar_subgrupos();
     });
+
     function cargar_bodega() {
+        $("#IdBodega").val();
+
         var sucursal = $("#IdSucursal").val();
 
         var datos = {
@@ -166,82 +177,106 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_bodega", "InventarioReportes",new { Area = "Reporte" })',
+            url: '@Url.Action("cargar_bodega", "InventarioReportes", new { Area = "Reportes" })',
             async: false,
+            bDeferRender: true,
+            bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-
-                $("#IdBodega").val(data.IdBodega);
+                $.each(data, function (i, row) {
+                    $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+                });
             },
             error: function (error) {
             }
         });
-    }
-    function cargar_lineas() {
-        var categoria = $("#IdCategoria").val();
+    };
+    
+            function cargar_lineas() {
+            $("#IdLinea").empty();
 
-        var datos = {
-            IdCategoria: categoria
-        }
-
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_lineas", "InventarioReportes",new { Area = "Reporte" })',
-            async: false,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-
-                $("#IdLinea").val(data.IdLinea);
-            },
-            error: function (error) {
+            var datos = {
+                IdCategoria: $("#IdCategoria").val(),
+                IdEmpresa: $("#IdEmpresa").val()
             }
-        });
-    }
+
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("cargar_lineas", "InventarioReportes", new { Area = "Reportes" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $.each(data, function (i, row) {
+                        $("#IdLinea").append("<option value=" + row.IdLinea + ">" + row.nom_linea + "</option>");
+                    });
+                },
+                error: function (error) {
+                }
+            });
+        };
+
+
     function cargar_grupos() {
-        var linea = $("#IdLinea").val();
-
+        $("#IdGrupo").empty();
+        
         var datos = {
-            IdLinea: linea
+            IdCategoria: $("#IdCategoria").val(),
+            IdLinea: $("#IdLinea").val(),
+            IdEmpresa: $("#IdEmpresa").val()
         }
 
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_grupos", "InventarioReportes",new { Area = "Reporte" })',
+            url: '@Url.Action("cargar_grupos", "InventarioReportes", new { Area = "Reportes" })',
             async: false,
+            bDeferRender: true,
+            bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
 
-                $("#IdGrupo").val(data.IdGrupo);
+                $.each(data, function (i, row) {
+                    $("#IdGrupo").append("<option value=" + row.IdGrupo + ">" + row.nom_grupo + "</option>");
+                });
             },
             error: function (error) {
             }
         });
-    }
+    };
+
+
     function cargar_subgrupos() {
-        var grupo = $("#IdGrupo").val();
-
+        $("#IdSubGrupo").empty();
+        
         var datos = {
-            IdGrupo: grupo
+            IdCategoria: $("#IdCategoria").val(),
+            IdLinea: $("#IdLinea").val(),
+            IdGrupo: $("#IdGrupo").val(),
+            IdEmpresa: $("#IdEmpresa").val()
         }
 
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_subgrupos", "InventarioReportes",new { Area = "Reporte" })',
+            url: '@Url.Action("cargar_subgrupos", "InventarioReportes", new { Area = "Reportes" })',
             async: false,
+            bDeferRender: true,
+            bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-
-                $("#IdSuGrupo").val(data.IdSubGrupo);
+                $.each(data, function (i, row) {
+                    $("#IdSubGrupo").append("<option value=" + row.IdSubgrupo + ">" + row.nom_subgrupo + "</option>");
+                });
             },
             error: function (error) {
             }
         });
-    }
+    };
 </script>
