--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_provisiones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/_GridViewPartial_provisiones.cshtml
@@ -75,6 +75,7 @@
                 sp.MinValue = 0;
                 sp.MaxValue = 999999999;
             });
+            column.PropertiesEdit.DisplayFormatString = "n2";
         });
         settings.Columns.Add(column =>
         {
@@ -86,6 +87,7 @@
                 sp.MinValue = 0;
                 sp.MaxValue = 999999999;
             });
+            column.PropertiesEdit.DisplayFormatString = "n2";
         });
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_debe");
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor_haber");
