--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
@@ -1,15 +1,15 @@
-﻿@model Core.Erp.Info.Helps.cl_filtros_Info
-
+﻿@model Core.Erp.Info.Helps.cl_filtros_facturacion_Info
 @{
+    Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "ROL_009";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
 }
-@using (Html.BeginForm())
+@using (Html.BeginForm("ROL_009", "RRHHReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    <div class="box collapsed-box">
+    <div class="box">
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
@@ -18,15 +18,15 @@
             </div>
             <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fa fa-plus"></i>
+                    <i class="fa fa-minus"></i>
                 </button>
                 <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
                     <i class="fa fa-times"></i>
                 </button>
             </div>
+
         </div>
         <div class="box-body">
-
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-2">
@@ -36,8 +36,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
-                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+                                @Html.DevExpress().DateEdit(settings =>
+                            {
+                                settings.Name = "fecha_ini";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = Unit.Percentage(100);
+                            }).GetHtml()
                             </div>
                         </div>
                     </div>
@@ -48,89 +55,48 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
-                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                                @Html.DevExpress().DateEdit(settings =>
+                            {
+                                settings.Name = "fecha_fin";
+                                settings.Properties.UseMaskBehavior = true;
+                                settings.Properties.EditFormat = EditFormat.Date;
+                                settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                settings.Width = Unit.Percentage(100);
+                            }).GetHtml()
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <div class="form-group">
-                                <label for="descuento_quincena">Mostrar</label>
-                                @Html.DevExpress().RadioButtonFor(q => q.mostrar_nov_pen, settings =>
-                                   {
-                                       settings.Name = "mostar_pen";
-                                       settings.GroupName = "estado_nov";
-                                       settings.Text = "Pendientes";
-                                   }).GetHtml()
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <div class="form-group">
-                                <label for="descuento_quincena">Mostrar</label>
-                                @Html.DevExpress().RadioButtonFor(q => q.mostrar_nov_can, settings =>
-                                   {
-                                       settings.Name = "mostar_can";
-                                       settings.GroupName = "estado_nov";
-                                       settings.Text = "Canceladas";
-                                   }).GetHtml()
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <div class="form-group">
-                                <label for="descuento_quincena">Mostrar</label>
-                                @Html.DevExpress().RadioButtonFor(q => q.mostrar_todas_nov, settings =>
-                                   {
-                                       settings.Name = "mostar_tod";
-                                       settings.GroupName = "estado_nov";
-                                       settings.Text = "Todas";
-                                   }).GetHtml()
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
             <!-- /.box-body -->
         </div>
     </div>
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">@ViewBag.Title</h3>
-                    <div class="box-tools pull-right">
-                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                            <i class="fa fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                            <i class="fa fa-times"></i>
-                        </button>
-                    </div>
-                </div>
-                <div class="box-body">
-                    @Html.DevExpress().WebDocumentViewer(settings =>
+
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            @Html.DevExpress().WebDocumentViewer(settings =>
                {
                    settings.MobileMode = false;
                    settings.Name = "webDocumentViewer";
-               }).Bind(ViewBag.Report).GetHtml();
-                </div>
-                <!-- /.box-body -->
-                <div class="box-footer">
-                    [@Session["IdEmpresa"]] @Session["nom_empresa"]
-                </div>
-                <!-- /.box-footer-->
-            </div>
+               }).Bind(ViewBag.Report).GetHtml()
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
 }
-<script>
-                $(function () {
-                    //Date picker
-                    $('#fecha_ini').datepicker({
-                        autoclose: true
-                    })
-                    $('#fecha_fin').datepicker({
-                        autoclose: true
-                    })
-                });
-</script>
