--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_004.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_004.cshtml
@@ -38,7 +38,7 @@
                 <div class="col-md-5">
                     <div class="form-group">
                         <label for="IdContacto">Contacto</label>
-                        @Html.TextBoxFor(q => q.IdContacto, new { @class = "form-control", @id = "IdContacto" })
+                        @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_contacto, "IdContacto", "Nombres"), new { @class = "form-control", @id = "IdContacto" })
                         @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -92,6 +92,32 @@
                 $('#fecha_corte').datepicker({
                     autoclose: true
                 })
-    });
+            });
+
+        function cargar_cliente() {
+                $("#IdContacto").empty();
+                var codigo = IdCliente.GetValue();
+
+            var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
+                        IdCliente: codigo
+                    }
+                    $.ajax({
+                        type: 'POST',
+                        data: JSON.stringify(datos),
+                        url: '@Url.Action("cargar_cliente", "CuentasPorCobrarReportes",new { Area = "Reportes"})',
+                        async: false,
+                        dataType: 'json',
+                        contentType: 'application/json; charset=utf-8',
+                        success: function (data) {
+                            $.each(data, function (i, row) {
+                                $("#IdContacto").append("<option value=" + row.IdContacto + ">" + row.Nombres + "</option>");
+                                $("#IdContacto").val("0");
+                        });
+                    },
+                    error: function (error) {
+                    }
+                });
+            };
     </script>
 
