--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_004.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_004.cshtml
@@ -9,6 +9,7 @@
 }
 @using (Html.BeginForm("CXC_004", "CuentasPorCobrarReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdEmpresa, new { @id = "IdEmpresa"})
 <div class="box">
     <div class="box-header with-border">
         <div class="row">
