--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_007.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/BAN_007.cshtml
@@ -1,17 +1,135 @@
-﻿
+﻿@model Core.Erp.Info.Helps.cl_filtros_banco_Info
 @{
+    Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "BAN_007";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
 }
-@using (Html.BeginForm())
+@using (Html.BeginForm("BAN_007", "Banco" +
+    "Reportes", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    Html.DevExpress().WebDocumentViewer(settings =>
-    {
-        settings.MobileMode = false;
-        settings.Name = "webDocumentViewer";
-    }).Bind(Model).GetHtml();
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    <div class="box">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                </div>
+            </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+
+        </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="IdBanco">Banco</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdBanco, settings =>
+                                          {
+                                              settings.Name = "IdBanco";
+                                              settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                              settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                                              settings.Properties.Columns.Add("IdBanco", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                                              settings.Properties.Columns.Add("ba_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+
+                                              //Campo ID
+                                              settings.Properties.ValueField = "IdBanco";
+                                              settings.Properties.ValueType = typeof(int);
+                                              settings.Properties.TextField = "ba_descripcion";
+                                              //Boton para seleccionar ningun registro
+                                              settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                                              settings.Properties.NullText = "== Seleccione ==";
+                                              settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+                                          }).BindList(ViewBag.lst_banco).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="IdPersona">Beneficiario</label>
+                            @Html.Partial("_CmbPersona_Banco", Model)
+                            @Html.ValidationMessageFor(q => q.IdPersona, "", new { @class = "text-danger" })
+
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">Fecha inicio</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
+                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="">Fecha fin</label>
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
+                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.box-body -->
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            @Html.DevExpress().WebDocumentViewer(settings =>
+       {
+           settings.MobileMode = false;
+           settings.Name = "webDocumentViewer";
+       }).Bind(ViewBag.Report).GetHtml()
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
 }
+<script>
+            $(function () {
+                //Date picker
+                $('#fecha_ini').datepicker({
+                    autoclose: true
+                })
+                $('#fecha_fin').datepicker({
+                    autoclose: true
+                })
+            });
+    
+</script>
 
