--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/_CmbPersona_Banco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/_CmbPersona_Banco.cshtml
@@ -24,7 +24,7 @@
         settings.Properties.AllowNull = true;
     })
     .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.BancoReportesController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Reportes.Controllers.BancoReportesController().get_info_bajo_demanda)
-    .Bind(Model.IdPersona);
+    .Bind(Model);
 
 }
 @comboBox.GetHtml()
