--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/Index.cshtml
@@ -67,15 +67,26 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_importacion">Cuenta contable*</label>
-                    @Html.Partial("_CmbCuenta_contable", Model)
+                    <label for="IdCtaCble">Cuenta contable padre importacion*</label>
+                    @Html.Partial("_CmbCuenta_contable_imp", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
            
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_invntario">Cuenta contable inventario*</label>
+                    @Html.Partial("_CmbCuenta_contable_inv", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_invntario, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-md-12">
