--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable_imp.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/ParametrosImportacion/_CmbCuenta_contable_imp.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "ParametrosImportacion", Action = "CmbCuenta_cta_contable", Area = "Importacion" };
+        settings.CallbackRouteValues = new { Controller = "ParametrosImportacion", Action = "CmbCuenta_cta_contable_imp", Area = "Importacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pc_Cuenta";
