--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liquidacion_oc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liquidacion_oc.cshtml
@@ -57,7 +57,29 @@
             }
 
         };
-        
+        settings.Columns.Add(c =>
+        {
+            c.Caption = "#";
+            c.SetDataItemTemplateContent(tc =>
+            {
+               
+
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Anular", "Anular", new { IdOrdenCompra_ext = DataBinder.Eval(tc.DataItem, "IdOrdenCompra_ext") },
+                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                    );
+                
+            });
+            c.SetHeaderTemplateContent(tc =>
+            {
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Nuevo", "GridViewPartial_orden_compra_por_liquidar", "OrdenCompraExterior").ToHtmlString()
+                );
+            });
+            c.Settings.AllowDragDrop = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
+            c.Width = Unit.Pixel(150);
+        });
         settings.Columns.Add("IdLiquidacion", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add("pe_cedulaRuc", "Cédula/Ruc").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
@@ -74,20 +96,7 @@
             });
         });
         settings.Columns.Add("oe_observacion", "Obaservación").Width = Unit.Percentage(30);
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Liquidar";
-            column.Width = Unit.Pixel(100);
-            column.SetDataItemTemplateContent(container =>
-            {
-                Html.DevExpress().HyperLink(hyperlink =>
-                {
-                    var IdOrdenCompra_ext = DataBinder.Eval(container.DataItem, "IdOrdenCompra_ext");
-                    hyperlink.Properties.Text = "Liquidar";
-                    hyperlink.NavigateUrl = Url.Action("Nuevo", "LiquidacionOrdenCompra", new { Area = "Importacion", IdOrdenCompra_ext = IdOrdenCompra_ext });
-                }).Render();
-            });
-        });
+
     });
 }
 @grid.Bind(Model).GetHtml()
