--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index.cshtml
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm())
 { 
-    <div class="box collapsed-box">
+    <div class="box">
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
