--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_inv_det.cshtml
@@ -71,14 +71,14 @@
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "dm_cantidad_sinConversion";
+            column.FieldName = "dm_cantidad";
             column.Caption = "cantidad";
             column.Width = Unit.Percentage(15);
 
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "mv_costo_sinConversion";
+            column.FieldName = "mv_costo";
             column.Caption = "Costo";
             column.Width = Unit.Percentage(15);
 
